--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GOL - SGOC - Reporte de Ocorrências</title>
+    <title>GOL - Reporte de Ocorrências</title>
     <style>
         /* CSS para deixar a página bonita */
         body {
